--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,101 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+    <android.support.v7.widget.GridLayout
+        android:layout_width="344dp"
+        android:layout_height="373dp"
+        android:layout_marginTop="96dp"
+        android:background="@drawable/board"
+        app:columnCount="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.619"
+        app:rowCount="3">
+
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="8dp"
+            app:layout_column="0"
+            app:layout_row="0"
+            app:srcCompat="@drawable/goldcoin" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+
+            android:layout_marginTop="8dp"
+            app:layout_column="1"
+            app:layout_row="0"
+            app:srcCompat="@drawable/goldcoin" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_column="2"
+            app:layout_row="0"
+            app:srcCompat="@drawable/goldcoin" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="30dp"
+            app:layout_column="1"
+            app:layout_row="1"
+            app:srcCompat="@drawable/goldcoin" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="8dp"
+
+            android:layout_marginTop="30dp"
+            app:layout_column="0"
+            app:layout_row="1"
+            app:srcCompat="@drawable/goldcoin" />
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/goldcoin"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="16dp"
+            app:layout_column="2"
+            app:layout_row="1" />
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="119dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/goldcoin"
+            app:layout_column="2"
+         android:layout_marginTop="20dp"
+            android:layout_marginLeft="8dp"
+            app:layout_row="2" />
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="119dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/goldcoin"
+            app:layout_column="0"
+         android:layout_marginTop="20dp"
+
+            app:layout_row="2" />
+
+
+
+    </android.support.v7.widget.GridLayout>
 </android.support.constraint.ConstraintLayout>
