--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,6 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
 
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             app:layout_column="2"
             app:layout_row="0"
@@ -78,18 +77,19 @@
             android:layout_height="100dp"
             app:srcCompat="@drawable/goldcoin"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="16dp"
+
             app:layout_column="2"
             app:layout_row="1" />
+
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="119dp"
             android:layout_height="100dp"
-            app:srcCompat="@drawable/goldcoin"
+            android:layout_marginTop="20dp"
             app:layout_column="2"
-         android:layout_marginTop="20dp"
-            android:layout_marginLeft="8dp"
-            app:layout_row="2" />
+            app:layout_row="2"
+
+            app:srcCompat="@drawable/goldcoin" />
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="119dp"
@@ -100,7 +100,13 @@
 
             app:layout_row="2" />
 
-
+        <ImageView
+            android:id="@+id/imgtest"
+            android:layout_width="119dp"
+            android:layout_height="100dp"
+            app:layout_column="1"
+            android:layout_marginTop="20dp"
+            app:layout_row="2" />
 
     </android.support.v7.widget.GridLayout>
 </android.support.constraint.ConstraintLayout>
