--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.619"
         app:rowCount="3">
-
-
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="100dp"
@@ -35,8 +33,6 @@
             android:id="@+id/imageView2"
             android:layout_width="100dp"
             android:layout_height="100dp"
-
-
             android:layout_marginTop="8dp"
             app:layout_column="1"
             app:layout_row="0"
@@ -46,7 +42,6 @@
             android:id="@+id/imageView3"
             android:layout_width="100dp"
             android:layout_height="100dp"
-
             android:layout_marginTop="8dp"
             app:layout_column="2"
             app:layout_row="0"
@@ -66,20 +61,19 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginLeft="8dp"
-
             android:layout_marginTop="30dp"
             app:layout_column="0"
             app:layout_row="1"
             app:srcCompat="@drawable/goldcoin" />
+
         <ImageView
             android:id="@+id/imageView7"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            app:srcCompat="@drawable/goldcoin"
             android:layout_marginTop="30dp"
-
             app:layout_column="2"
-            app:layout_row="1" />
+            app:layout_row="1"
+            app:srcCompat="@drawable/goldcoin" />
 
         <ImageView
             android:id="@+id/imageView9"
@@ -90,22 +84,22 @@
             app:layout_row="2"
 
             app:srcCompat="@drawable/goldcoin" />
+
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="119dp"
             android:layout_height="100dp"
-            app:srcCompat="@drawable/goldcoin"
+            android:layout_marginTop="20dp"
             app:layout_column="0"
-         android:layout_marginTop="20dp"
-
-            app:layout_row="2" />
+            app:layout_row="2"
+            app:srcCompat="@drawable/goldcoin" />
 
         <ImageView
             android:id="@+id/imgtest"
             android:layout_width="119dp"
             android:layout_height="100dp"
-            app:layout_column="1"
             android:layout_marginTop="20dp"
+            app:layout_column="1"
             app:layout_row="2" />
 
     </android.support.v7.widget.GridLayout>
