--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="100dp"
+            android:layout_width="107dp"
             android:layout_height="100dp"
             android:layout_marginTop="30dp"
             app:layout_column="1"
@@ -58,7 +58,7 @@
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="100dp"
+            android:layout_width="103dp"
             android:layout_height="100dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="30dp"
@@ -87,7 +87,7 @@
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="119dp"
+            android:layout_width="95dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
             app:layout_column="0"
@@ -100,6 +100,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
             app:layout_column="1"
+            android:onClick="dropIn"
             app:layout_row="2" />
 
     </android.support.v7.widget.GridLayout>
