--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,70 +20,74 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.619"
         app:rowCount="3">
+
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="82dp"
+            android:layout_height="78dp"
             android:layout_marginTop="8dp"
+            android:onClick="dropIn"
             app:layout_column="0"
+            android:layout_marginLeft="10dp"
             app:layout_row="0"
-            app:srcCompat="@drawable/goldcoin" />
+            android:tag="0"/>
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="85dp"
+            android:layout_height="93dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="8dp"
+            android:onClick="dropIn"
             app:layout_column="1"
             app:layout_row="0"
-            app:srcCompat="@drawable/goldcoin" />
+            android:tag="1"/>
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="78dp"
+            android:layout_height="90dp"
             android:layout_marginTop="8dp"
+            android:onClick="dropIn"
             app:layout_column="2"
-            app:layout_row="0"
-            app:srcCompat="@drawable/goldcoin" />
-
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="107dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="30dp"
-            app:layout_column="1"
-            app:layout_row="1"
-            app:srcCompat="@drawable/goldcoin" />
+            android:tag="2"
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="103dp"
+            android:layout_width="90dp"
             android:layout_height="100dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="30dp"
+            android:onClick="dropIn"
             app:layout_column="0"
+            android:tag="3"
+            app:layout_row="1" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="82dp"
+            android:layout_height="78dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:tag="4"
+            app:layout_column="1"
             app:layout_row="1"
-            app:srcCompat="@drawable/goldcoin" />
+            android:onClick="dropIn" />
+
+
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="81dp"
+            android:layout_height="86dp"
             android:layout_marginTop="30dp"
+            android:onClick="dropIn"
             app:layout_column="2"
-            app:layout_row="1"
-            app:srcCompat="@drawable/goldcoin" />
+            android:tag="5"
+            app:layout_row="1" />
 
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="119dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="20dp"
-            app:layout_column="2"
-            app:layout_row="2"
-
-            app:srcCompat="@drawable/goldcoin" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -92,7 +96,8 @@
             android:layout_marginTop="20dp"
             app:layout_column="0"
             app:layout_row="2"
-            app:srcCompat="@drawable/goldcoin" />
+            android:tag="6"
+            android:onClick="dropIn" />
 
         <ImageView
             android:id="@+id/imgtest"
@@ -100,8 +105,19 @@
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
             app:layout_column="1"
+            android:tag="7"
+            android:layout_marginLeft="16dp"
             android:onClick="dropIn"
             app:layout_row="2" />
 
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="76dp"
+            android:layout_height="81dp"
+            android:layout_marginTop="20dp"
+            android:onClick="dropIn"
+            app:layout_column="2"
+            android:tag="8"
+            app:layout_row="2" />
     </android.support.v7.widget.GridLayout>
 </android.support.constraint.ConstraintLayout>
