--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,58 @@
     tools:context=".MainActivity">
 
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="169dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="playAgain"
+        android:text="Play Again"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.652"
+        app:layout_constraintStart_toEndOf="@+id/txtWinner"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/txtWinner"
+        android:layout_width="187dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.038"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.GridLayout
-        android:layout_width="344dp"
-        android:layout_height="373dp"
-        android:layout_marginTop="96dp"
+        android:id="@+id/gridLayout"
+        android:layout_width="341dp"
+        android:layout_height="364dp"
+        android:layout_marginBottom="48dp"
         android:background="@drawable/board"
         app:columnCount="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.619"
         app:rowCount="3">
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="82dp"
             android:layout_height="78dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
             android:onClick="dropIn"
+            android:tag="0"
             app:layout_column="0"
-            android:layout_marginLeft="10dp"
-            app:layout_row="0"
-            android:tag="0"/>
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -39,9 +67,9 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="8dp"
             android:onClick="dropIn"
+            android:tag="1"
             app:layout_column="1"
-            app:layout_row="0"
-            android:tag="1"/>
+            app:layout_row="0" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -49,8 +77,8 @@
             android:layout_height="90dp"
             android:layout_marginTop="8dp"
             android:onClick="dropIn"
-            app:layout_column="2"
             android:tag="2"
+            app:layout_column="2"
             app:layout_row="0" />
 
         <ImageView
@@ -60,22 +88,21 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="30dp"
             android:onClick="dropIn"
-            app:layout_column="0"
             android:tag="3"
+            app:layout_column="0"
             app:layout_row="1" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="82dp"
             android:layout_height="78dp"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="20dp"
+            android:onClick="dropIn"
             android:tag="4"
             app:layout_column="1"
-            app:layout_row="1"
-            android:onClick="dropIn" />
-
+            app:layout_row="1" />
 
 
         <ImageView
@@ -84,8 +111,8 @@
             android:layout_height="86dp"
             android:layout_marginTop="30dp"
             android:onClick="dropIn"
-            app:layout_column="2"
             android:tag="5"
+            app:layout_column="2"
             app:layout_row="1" />
 
 
@@ -94,20 +121,20 @@
             android:layout_width="95dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
-            app:layout_column="0"
-            app:layout_row="2"
+            android:onClick="dropIn"
             android:tag="6"
-            android:onClick="dropIn" />
+            app:layout_column="0"
+            app:layout_row="2" />
 
         <ImageView
             android:id="@+id/imgtest"
             android:layout_width="119dp"
             android:layout_height="100dp"
-            android:layout_marginTop="20dp"
-            app:layout_column="1"
-            android:tag="7"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="20dp"
             android:onClick="dropIn"
+            android:tag="7"
+            app:layout_column="1"
             app:layout_row="2" />
 
         <ImageView
@@ -116,8 +143,9 @@
             android:layout_height="81dp"
             android:layout_marginTop="20dp"
             android:onClick="dropIn"
-            app:layout_column="2"
             android:tag="8"
+            app:layout_column="2"
             app:layout_row="2" />
     </android.support.v7.widget.GridLayout>
+
 </android.support.constraint.ConstraintLayout>
