--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,112 +40,121 @@
         android:id="@+id/gridLayout"
         android:layout_width="341dp"
         android:layout_height="364dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="84dp"
         android:background="@drawable/board"
         app:columnCount="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintHorizontal_bias="0.228"
         app:layout_constraintStart_toStartOf="parent"
         app:rowCount="3">
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="82dp"
-            android:layout_height="78dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
             android:onClick="dropIn"
             android:tag="0"
             app:layout_column="0"
             app:layout_row="0" />
-
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="85dp"
-            android:layout_height="93dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
             android:onClick="dropIn"
             android:tag="1"
             app:layout_column="1"
             app:layout_row="0" />
-
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="78dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
             android:onClick="dropIn"
+            android:layout_marginLeft="8dp"
             android:tag="2"
             app:layout_column="2"
             app:layout_row="0" />
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="90dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="30dp"
-            android:onClick="dropIn"
-            android:tag="3"
-            app:layout_column="0"
-            app:layout_row="1" />
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="82dp"
-            android:layout_height="78dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="20dp"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
+            android:onClick="dropIn"
+            android:tag="3"
+            android:layout_marginTop="20dp"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
             android:onClick="dropIn"
             android:tag="4"
+            android:layout_marginTop="20dp"
             app:layout_column="1"
+            app:layout_row="1" />
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
+            android:onClick="dropIn"
+            android:tag="5"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="20dp"
+            app:layout_column="2"
             app:layout_row="1" />
 
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="81dp"
-            android:layout_height="86dp"
-            android:layout_marginTop="30dp"
-            android:onClick="dropIn"
-            android:tag="5"
-            app:layout_column="2"
-            app:layout_row="1" />
-
-
-        <ImageView
-            android:id="@+id/imageView6"
             android:layout_width="95dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
             android:onClick="dropIn"
             android:tag="6"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="20dp"
             app:layout_column="0"
             app:layout_row="2" />
 
         <ImageView
-            android:id="@+id/imgtest"
-            android:layout_width="119dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="20dp"
+            android:id="@+id/imageView8"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
             android:onClick="dropIn"
             android:tag="7"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="20dp"
             app:layout_column="1"
             app:layout_row="2" />
 
         <ImageView
             android:id="@+id/imageView9"
-            android:layout_width="76dp"
-            android:layout_height="81dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="95dp"
+            android:layout_height="92dp"
+            android:layout_margin="10dp"
             android:onClick="dropIn"
             android:tag="8"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="20dp"
             app:layout_column="2"
             app:layout_row="2" />
+
+
+
+
+
+
     </android.support.v7.widget.GridLayout>
 
 </android.support.constraint.ConstraintLayout>
